--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
 ---
 layout: default
-title: 王垠的博客
 ---
-<h2>{{ page.title }}</h2>
+<h1>王垠的博客</h1>
+
+<div style="vertical-align: middle">
+<iframe width="500" height="400" src="http://www.mindomo.com/view.htm?m=9d8e168a65ea44ee88ec69f8d11727d3" frameborder="0" allowfullscreen>Your browser does not support frames. View this <a href="http://www.mindomo.com/view.htm?m=9d8e168a65ea44ee88ec69f8d11727d3" target="_blank">mind map</a> on its original site. It was created using Mindomo <a href="http://www.mindomo.com" target="_blank">mind mapping software</a>.</iframe>
+</div>
+
 <ul>
 　　{% for post in site.posts %}
 　　　　<li>{{ post.date | date_to_string }} <a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></li>
