--- a/test.html
+++ b/test.html
@@ -21,6 +21,25 @@
 </code>
 </pre>
 
+<p>我喜欢用“启发”这个词。比如我经常会对人说：“你启发了我。”这是什么意思呢？
+
+“启发”的意思并不等于“我没有你懂得多”或者“你比我聪明”，而是一个很含糊的词。
+
+如果 A 受到了 B 启发，有几种可能性：
+
+1. B 做了一件很聪明的事情，所以从正面启发了 A
+2. B 做了一件很笨的事情，所以从反面启发了 A
+3. B 做了一件不好也不坏的事情，但是这个事情正好触发了 A 事先想的一个问题的答案
+
+<p>这就是为什么“美丽心灵”里的 John Nash 在酒吧看到一个美女之后，
+解决了一个重要的问题，然后对她说“谢谢”。
+
+Richard Feynman 也提到：“在你的头脑里随时准备好12个问题。每当发生一件有趣的事情，
+就检查一下其中有一个问题可以因此获得线索。久而久之，人们就会称你为天才。”
+
+孔夫子所谓的“三人行必有我师焉”，也就是这个意思吧。
+
+
 </body>
 </html>
 
