--- a/index.html
+++ b/index.html
@@ -1,11 +1,8 @@
 ---
 layout: default
-title: 王垠的博客
+title: 寂静之声
 ---
 
-<div style="vertical-align: middle">
-<iframe width="600" height="500" src="http://www.mindomo.com/view.htm?m=9d8e168a65ea44ee88ec69f8d11727d3" frameborder="0" allowfullscreen>Your browser does not support frames. View this <a href="http://www.mindomo.com/view.htm?m=9d8e168a65ea44ee88ec69f8d11727d3" target="_blank">mind map</a> on its original site. It was created using Mindomo <a href="http://www.mindomo.com" target="_blank">mind mapping software</a>.</iframe>
-</div>
 
 <ul>
 　　{% for post in site.posts %}
@@ -13,3 +10,6 @@ title: 王垠的博客
 　　{% endfor %}
 </ul>
 
+<div style="vertical-align: middle">
+<iframe width="600" height="500" src="http://www.mindomo.com/view.htm?m=9d8e168a65ea44ee88ec69f8d11727d3" frameborder="0" allowfullscreen>Your browser does not support frames. View this <a href="http://www.mindomo.com/view.htm?m=9d8e168a65ea44ee88ec69f8d11727d3" target="_blank">mind map</a> on its original site. It was created using Mindomo <a href="http://www.mindomo.com" target="_blank">mind mapping software</a>.</iframe>
+</div>
