--- a/test.html
+++ b/test.html
@@ -33,7 +33,7 @@
 <li> B 做了一件不好也不坏的事情，但是这个事情正好触发了 A 事先想的一个问题的答案
 </ol>
 
-<p>这就是为什么“美丽心灵”里的 John Nash 在酒吧看到一个美女之后，
+<p>这就是为什么“美丽心灵”里的 <code>John Nash</code> 在酒吧看到一个美女之后，
 解决了一个重要的问题，然后对她说“谢谢”。
 
 <blockquote>
