--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@ layout: default
 title: 寂静之声
 ---
 
+<blockquote>
+还没来得及写成文章的想法的<a href="http://www.mindomo.com/view.htm?m=9d8e168a65ea44ee88ec69f8d11727d3">思维导图</a>
+</blockquote>
+
 
 <ul>
 　　{% for post in site.posts %}
