--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: 王垠的中文博客
 ---
 
 <blockquote>
-<a href="http://www.mindomo.com/view.htm?m=9d8e168a65ea44ee88ec69f8d11727d3">草稿的思维导图</a>
+<a href="http://www.mindomo.com/view.htm?m=9d8e168a65ea44ee88ec69f8d11727d3">一些没写下来的想法</a>
 </blockquote>
 
 
