--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ title: 王垠的中文博客
 </blockquote>
 
 <blockquote>
-<a href="http://en.yinwang.org">英文博客</a>
+<a href="http://en.yinwang.org">部分英文博客文章</a>
 </blockquote>
 
 
