--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: 当然我在扯淡
 ---
 
 <blockquote>
-<a href="http://www.mindomo.com/view.htm?m=9d8e168a65ea44ee88ec69f8d11727d3">一些没写下来的想法</a>
+<a href="http://www.mindomo.com/view.htm?m=4006528863454a93b643329beae2729a">思维导图目录</a>
 </blockquote>
 
 <blockquote>
