--- a/index.html
+++ b/index.html
@@ -17,3 +17,5 @@ title: 当然我在扯淡
 　　　　<li><a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></li>
 　　{% endfor %}
 </ul>
+
+<img src="http://www.yinwang.org/images/yin-barcode.gif">
