--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@ title: 当然我在扯淡
 <a href="http://en.yinwang.org">部分英文博客文章</a>
 </blockquote>
 
+<blockquote>
+<a href="http://www.yinwang.org/atom.xml">ATOM</a>
+</blockquote>
+
 
 <ul>
 　　{% for post in site.posts %}
