--- a/index.html
+++ b/index.html
@@ -22,4 +22,4 @@ title: 当然我在扯淡
 　　{% endfor %}
 </ul>
 
-<img src="http://www.yinwang.org/images/yin-barcode.gif" align="middle">
+<img class="displayed" src="http://www.yinwang.org/images/yin-barcode.gif">
