--- a/index.html
+++ b/index.html
@@ -7,13 +7,11 @@ title: 当然我在扯淡
 <a href="http://www.mindomo.com/view.htm?m=4006528863454a93b643329beae2729a">思维导图目录</a>
 </blockquote>
 
-<blockquote>
 <a href="http://en.yinwang.org">部分英文博客文章</a>
-</blockquote>
-
-<blockquote>
+|
+<a href="http://www.yinwang.org/atom.xml">思维导图分享</a>
+|
 <a href="http://www.yinwang.org/atom.xml">ATOM</a>
-</blockquote>
 
 
 <ul>
