--- a/index.html
+++ b/index.html
@@ -3,13 +3,11 @@ layout: default
 title: 当然我在扯淡
 ---
 
-<blockquote>
 <a href="http://www.mindomo.com/view.htm?m=4006528863454a93b643329beae2729a">思维导图目录</a>
-</blockquote>
-
+|
 <a href="http://en.yinwang.org">部分英文博客文章</a>
 |
-<a href="http://www.yinwang.org/atom.xml">思维导图分享</a>
+<a href="http://www.mindomo.com/view.htm?m=9d8e168a65ea44ee88ec69f8d11727d3">思维导图分享</a>
 |
 <a href="http://www.yinwang.org/atom.xml">ATOM</a>
 
