--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ title: 当然我在扯淡
 |
 <a href="http://en.yinwang.org">部分英文博客文章</a>
 |
-<a href="http://www.mindomo.com/view.htm?m=9d8e168a65ea44ee88ec69f8d11727d3">思维导图分享</a>
+<a href="http://www.mindomo.com/view.htm?m=9d8e168a65ea44ee88ec69f8d11727d3">我的中期记忆</a>
 |
 <a href="http://www.yinwang.org/atom.xml">ATOM</a>
 
