--- a/_posts/2013-04-21-ydiff-结构化程序比较.html
+++ b/_posts/2013-04-21-ydiff-结构化程序比较.html
@@ -15,7 +15,10 @@
 <h2>ydiff - 结构化的程序比较</h2>
 
 
-<iframe src="http://www.yinwang.org/resources/mk1-mk2.html" width="90%" height="50%">
+<iframe src="http://www.yinwang.org/resources/mk1-mk2.html" width="90%" height="50%"></iframe>
+
+<br><a href="http://www.yinwang.org/resources/mk1-mk2.html">(全屏)</a>
+
 
 </body>
 
