--- a/index.html
+++ b/index.html
@@ -18,4 +18,4 @@ title: 当然我在扯淡
 　　{% endfor %}
 </ul>
 
-<img class="displayed" src="http://www.yinwang.org/images/yin-barcode.gif">
+<img src="http://www.yinwang.org/images/yin-barcode.gif">
