--- a/_posts/2013-04-21-ydiff-结构化的程序比较.html
+++ b/_posts/2013-04-21-ydiff-结构化的程序比较.html
@@ -39,7 +39,7 @@
 <p>上面的界面有如下特点：
 
 <ol>
-<li>红色表示“删除”，绿色表示“插入”，白色表示“移动”
+<li>红色表示“删除”，绿色表示“插入”，白色表示“移动”或者没有变化
 <li>左右窗口同步滚动
 <li>点击白色方框，就可以依据框里的变量进行对齐
 <li>点击之后，左右窗口根据对齐的变量重新“耦合”，同步滚动
@@ -47,7 +47,7 @@
 
 <h3>技术</h3>
 
-ydiff 里面含有一些被我低估的先进技术。我曾经认为我只是在模仿或者重新发明某些技术（比如 Haskell 的 <a href="http://www.haskell.org/haskellwiki/Parsec">Parsec</a> 和 Tree Editing Distance）。可是我其实只是看到它们的“概念”，而没有看它们的细节。我受到了它们的启发，却没有真正的模仿它们。我独立的完成了所有这些程序，所以我的系统里面其实含有独立的创新成分。
+ydiff 里面含有一些被我低估的先进技术。我曾经认为我只是在模仿或者重新发明某些技术（比如 Haskell 的 <a href="http://www.haskell.org/haskellwiki/Parsec">Parsec</a> 和 Tree Editing Distance）。可是我其实只是看到它们的“原理”，而没有照搬它们的“细节”。我受到了它们的启发，却没有真正的模仿它们。我独立的完成了所有这些程序，所以我的系统里面其实含有独立的创新成分。
 
 <p>在我看来，ydiff 里面含有以下一些先进的技术：
 
