--- a/_posts/2013-04-21-ydiff-结构化的程序比较.html
+++ b/_posts/2013-04-21-ydiff-结构化的程序比较.html
@@ -47,7 +47,7 @@
 
 <h3>技术</h3>
 
-ydiff 里面含有一些被我低估的先进技术。我曾经认为我只是在模仿或者重新发明某些技术（比如 Haskell 的 <a href="http://www.haskell.org/haskellwiki/Parsec">Parsec</a> 和 Tree Editing Distance）。可是我其实只是看到它们的“原理”，而没有照搬它们的“细节”。我受到了它们的启发，却没有真正的模仿它们。我独立的完成了所有这些程序。
+ydiff 里面含有一些被我低估的先进技术。我曾经认为我只是在模仿或者重新发明某些技术（比如 Haskell 的 <a href="http://www.haskell.org/haskellwiki/Parsec">Parsec</a> 和 Tree Editing Distance）。可是我其实只是看到它们的“想法”，而没有照搬它们的“细节”。我受到了它们的启发，却没有真正的模仿它们。我独立的完成了所有这些程序，连它们的文档和代码都没有看过。
 
 
 <p>在我看来，ydiff 里面含有以下一些先进的技术：
