--- a/_posts/2013-04-21-ydiff-结构化的程序比较.html
+++ b/_posts/2013-04-21-ydiff-结构化的程序比较.html
@@ -138,4 +138,11 @@ Shell::InstallUtilityScript
 
 <p>所以目前 ydiff 唯一会完整处理的代码是 Lisp/Scheme 代码。这不是我做得不够好，而是故意留一手的战略措施。我在设计一种新的语言，它将会使用 S-expression 作为它的语法。ydiff 会成为这种新语言的版本控制系统的基石。
 
+
+<h3>源代码</h3>
+
+ydiff 是完全开源的项目，可以从我的 GitHub 免费获得。我使用了最“邪恶”的 GPL 的版权，因为我不想让人把它用于任何商业用途。
+
+<https://github.com/yinwang0/ydiff>
+
 </html>
