--- a/_posts/2013-04-21-ydiff-结构化的程序比较.html
+++ b/_posts/2013-04-21-ydiff-结构化的程序比较.html
@@ -143,6 +143,6 @@ Shell::InstallUtilityScript
 
 ydiff 是完全开源的项目，可以从我的 GitHub 免费获得。我使用了最“邪恶”的 GPL 的版权，因为我不想让人把它用于任何商业用途。
 
-<https://github.com/yinwang0/ydiff>
+<a href="https://github.com/yinwang0/ydiff">https://github.com/yinwang0/ydiff</a>
 
 </html>
