--- a/_posts/2013-04-21-ydiff-结构化的程序比较.html
+++ b/_posts/2013-04-21-ydiff-结构化的程序比较.html
@@ -141,7 +141,7 @@ Shell::InstallUtilityScript
 
 <p>写出 C++ 的 parser 并不是想把它投入使用，而只是想小试一下我的“牛刀”。我的 C++ 和 JS 的 parser 里面其实还缺少一些东西，但是我并不打算 parse 整个 C++ 或者 JavaScript 语言。能够写出正确的 C++ parser 完全不能说明我的水平。我为什么要帮这些糟糕的语言设计一个这么优美的工具呢？那是在助纣为虐。其实我希望这些垃圾语言越早死掉越好。
 
-<p>所以目前 ydiff 唯一会完整处理的代码是 Lisp/Scheme 代码。这不是我做得不够好，而是故意留一手的战略措施。我在设计一种新的语言，它将会使用 S-expression 作为它的语法。ydiff 会成为这种新语言的版本控制系统的基石。
+<p>所以目前 ydiff 唯一会完整处理的代码是 Lisp/Scheme 代码。这不是我做得不够好，而是故意留一手的战略措施。我在设计一种新的语言，它将会使用 S-expression 作为它的语法。ydiff 会成为这种新语言的版本控制系统的基石。而 Lisp 和 Scheme，由于它们选择了正确的语法设计，会顺便得到好处。
 
 
 <h3>源代码</h3>
