--- a/_posts/2013-04-21-ydiff-结构化的程序比较.html
+++ b/_posts/2013-04-21-ydiff-结构化的程序比较.html
@@ -146,7 +146,7 @@ Shell::InstallUtilityScript
 
 <h3>源代码</h3>
 
-ydiff 是完全开源的项目，它可以从我的 GitHub 免费获得。我使用了最“邪恶”的 GPL 的版权，因为它从头到尾都是我一个人的作品，我不想让人把它用于任何商业用途。
+ydiff 是完全开源的项目，它可以从我的 GitHub 免费获得。我使用了最“邪恶”的 GPL 版权，因为它从头到尾都是我一个人的作品，我不想让人把它用于任何商业用途。
 
 <p><a href="https://github.com/yinwang0/ydiff">https://github.com/yinwang0/ydiff</a>
 
