--- a/_posts/2013-04-21-ydiff-结构化的程序比较.html
+++ b/_posts/2013-04-21-ydiff-结构化的程序比较.html
@@ -14,7 +14,7 @@
 
 <h2>ydiff - 结构化的程序比较</h2>
 
-<p><a href="https://github.com/yinwang0/ydiff">ydiff</a> 是我的一个小实验，用以探索一种全新的程序比较以及版本控制系统。说它是“小实验”的原因是因为实现它所用的技能占不到我头脑 10% 的能力，我花在上面的时间不到一个月。我一直以为已经有其他人做出了类似的系统，可是几年以后我才发现，它所包含的技术对于别人来说的难度出乎我的意料之外。ydiff 到现在仍然是世界上最先进的程序比较系统。它的算法精确性和界面的友好性，大大超过了 <a href="http://www.semdesigns.com/Products/SmartDifferencer">Semantic Design SmartDifferencer</a>, <a href="http://cmpp.coodesoft.com">Compare++</a> 等商业产品。
+<p><a href="https://github.com/yinwang0/ydiff">ydiff</a> 是我的一个小实验，用以探索一种全新的程序比较以及版本控制系统。说它是“小实验”的原因是因为实现它所用的技能占不到我头脑 10% 的能力，我花在上面的时间不到一个月。我一直以为已经有其他人做出了类似的系统，可是几年以后我才发现，它所包含的技术对于别人来说的难度出乎我的意料之外。ydiff 到现在仍然是世界上最先进的程序比较系统。它的算法精确性和界面的友好性，大大超过了 <a href="http://www.semdesigns.com/Products/SmartDifferencer">Semantic Designs SmartDifferencer</a>, <a href="http://cmpp.coodesoft.com">Compare++</a> 等商业产品。
 
 
 <h3>与 diff 的本质区别</h3>
