--- a/_posts/2013-04-21-ydiff-结构化的程序比较.html
+++ b/_posts/2013-04-21-ydiff-结构化的程序比较.html
@@ -19,7 +19,7 @@
 
 <h3>与 diff 的本质区别</h3>
 
-<p>也许我根本不应该给它起名叫“ydiff”，让人感觉它只不过是对 diff 的微小改进。然而，ydiff 的原理比起 diff，其实是革命性的。如果说 ydiff 的代码里面有一块是 diff 的话，那块代码占据的比重不到 1%。
+<p>也许我根本不应该给它起名叫“ydiff”，让人感觉它只不过是对 diff 的微小改进。然而，ydiff 的原理比起 diff，其实是革命性的进步。如果说 ydiff 的代码里面有一块是 diff 的话，那块代码占据的比重不到 1%。
 
 <p>ydiff 与 diff 的本质区别在于，diff 只是对程序进行基于“文本”的对比，它根本不对程序进行 parse。而 ydiff 含有完整的针对程序语言的 parser，在得到了 AST 之后，才对 AST 进行“结构化的比较”。
 
