--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@ title: 当然我在扯淡
 
 <a href="http://www.mindomo.com/view.htm?m=4006528863454a93b643329beae2729a">思维导图目录</a>
 |
-<a href="http://en.yinwang.org">部分英文博客文章</a>
+<a href="http://en.yinwang.org">部分英文博文</a>
 |
-<a href="http://www.mindomo.com/view.htm?m=8cc4f95228f942f8886106d876d1b041">我的中期记忆</a>
+<a href="http://www.mindomo.com/view.htm?m=8cc4f95228f942f8886106d876d1b041">中期记忆</a>
 |
-<a href="http://www.yinwang.org/atom.xml">ATOM</a>
+<a href="https://www.icloud.com/photostream/#ABJtdOXmzb51F">最近看到的东西</a>
 
 
 <ul>
