--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ title: 当然我在扯淡
 |
 <a href="http://www.mindomo.com/view.htm?m=8cc4f95228f942f8886106d876d1b041">中期记忆</a>
 |
-<a href="https://www.icloud.com/photostream/#ABJtdOXmzb51F">最近看到的东西</a>
+<a href="mailto:shredderyin@gmail.com">给我来信</a>
 
 
 <ul>
