--- a/_posts/2013-07-06-PyDiff-Python结构化程序比较工具.html
+++ b/_posts/2013-07-06-PyDiff-Python结构化程序比较工具.html
@@ -26,7 +26,7 @@
 
 <h3>Demo</h3>
 
-<p>你可以在下面的窗口中看到 PyDiff 的输出结果，是 PyDiff 对比我最近对它自己代码的大幅度修改。
+<p>你可以在下面的窗口中看到 PyDiff 的输出结果，是 PyDiff 对比它自己的代码（我最近两天对它的修改）。
 
 <p><iframe src="http://www.yinwang.org/resources/pydiff1-pydiff2.html" width="96%" height="50%"></iframe>
 
