--- a/_posts/2013-07-06-PyDiff-Python结构化程序比较工具.html
+++ b/_posts/2013-07-06-PyDiff-Python结构化程序比较工具.html
@@ -21,7 +21,7 @@
 
 <a href="http://github.com/yinwang0/pydiff">https://github.com/yinwang0/pydiff</a>
 
-<p>对比大型文件的时候可能速度会成一定的问题。不过我打算以后对算法做一个比较大的改进。
+<p>对比大型文件的时候可能速度会成一定的问题。不过我打算以后对算法做一个比较大的改进。如果发现 bug 请在 GitHub 中向我报告。谢谢。
 
 
 <h3>Demo</h3>
