--- a/_posts/2013-07-06-PyDiff-Python结构化程序比较工具.html
+++ b/_posts/2013-07-06-PyDiff-Python结构化程序比较工具.html
@@ -35,10 +35,10 @@
 <p>上面的界面有如下特点：
 
 <ol>
-<li>红色表示“删除”，绿色表示“插入”，白色表示“移动”或者没有变化
-<li>左右窗口同步滚动
-<li>点击白色方框，就可以依据框里的变量进行对齐
-<li>点击之后，左右窗口根据对齐的变量重新“耦合”，同步滚动
+<li>红色表示“删除”，绿色表示“插入”，白色表示“移动”或者没有变化，蓝色表示有小幅度修改。
+<li>左右窗口同步滚动。
+<li>点击白色方框，就可以依据框里的变量进行对齐。
+<li>点击之后，左右窗口根据对齐的变量重新“耦合”，同步滚动。
 </ol>
 
 </html>
