--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@ title: 当然我在扯淡
 <a href="http://www.mindomo.com/view.htm?m=8cc4f95228f942f8886106d876d1b041">中期记忆</a>
 |
 <a href="mailto:shredderyin@gmail.com">给我来信</a>
-
+|
+<a href="http://www.weibo.com/yinwang0">微博</a>
 
 <ul>
 　　{% for post in site.posts %}
