--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ title: 当然我在扯淡
 |
 <a href="mailto:shredderyin@gmail.com">给我来信</a>
 |
-<a href="http://www.zhihu.com/people/yinwang0">知乎</a>
+<a href="https://plus.google.com/117380487359344039293">Google+</a>
 
 
 <ul>
